@@ -3,12 +3,18 @@ package gg.projecteden.nexus.features.listeners;
 import com.gmail.nossr50.events.experience.McMMOPlayerLevelUpEvent;
 import com.gmail.nossr50.mcMMO;
 import com.vexsoftware.votifier.model.VotifierEvent;
-import gg.projecteden.annotations.Environments;
+import gg.projecteden.api.common.annotations.Environments;
+import gg.projecteden.api.common.utils.EnumUtils;
+import gg.projecteden.api.common.utils.Env;
+import gg.projecteden.api.common.utils.TimeUtils.TickTime;
+import gg.projecteden.api.common.utils.TimeUtils.Timespan;
 import gg.projecteden.nexus.Nexus;
 import gg.projecteden.nexus.features.votes.EndOfMonth.TopVoterData;
 import gg.projecteden.nexus.models.banker.Banker;
 import gg.projecteden.nexus.models.banker.BankerService;
 import gg.projecteden.nexus.models.cooldown.CooldownService;
+import gg.projecteden.nexus.models.dailyreward.DailyRewardUser;
+import gg.projecteden.nexus.models.dailyreward.DailyRewardUserService;
 import gg.projecteden.nexus.models.hours.HoursService;
 import gg.projecteden.nexus.models.hours.HoursService.HoursTopArguments;
 import gg.projecteden.nexus.models.hours.HoursService.PageResult;
@@ -18,41 +24,46 @@ import gg.projecteden.nexus.models.store.Contributor;
 import gg.projecteden.nexus.models.store.ContributorService;
 import gg.projecteden.nexus.utils.CitizensUtils;
 import gg.projecteden.nexus.utils.PlayerUtils;
-import gg.projecteden.nexus.utils.StringUtils;
 import gg.projecteden.nexus.utils.Tasks;
-import gg.projecteden.utils.Env;
-import gg.projecteden.utils.TimeUtils.TickTime;
-import gg.projecteden.utils.TimeUtils.Timespan;
+import gg.projecteden.nexus.utils.Utils;
 import lombok.NoArgsConstructor;
+import org.apache.commons.lang.NotImplementedException;
+import org.bukkit.Bukkit;
+import org.bukkit.Material;
+import org.bukkit.OfflinePlayer;
+import org.bukkit.Statistic;
+import org.bukkit.entity.EntityType;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
-import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.NotNull;
 
-import java.time.LocalDate;
+import java.text.NumberFormat;
 import java.time.YearMonth;
+import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
+import static gg.projecteden.api.common.utils.UUIDUtils.UUID0;
 import static gg.projecteden.nexus.utils.PlayerUtils.runCommandAsConsole;
 import static gg.projecteden.nexus.utils.StringUtils.colorize;
 import static gg.projecteden.nexus.utils.StringUtils.decolorize;
-import static java.util.stream.Collectors.toList;
 
 @NoArgsConstructor
 @Environments(Env.PROD)
 public class Podiums implements Listener {
 
 	static {
-		if (Nexus.getEnv() == Env.PROD)
-			Tasks.repeat(TickTime.SECOND.x(30), TickTime.HOUR, () -> {
-				for (Podium podium : Podium.values())
-					podium.update();
-			});
+		Nexus.getCron().schedule("0 * * * *", () -> {
+			int wait = 0;
+			for (Podium podium : Podium.values())
+				Tasks.wait(wait += TickTime.SECOND.x(10), podium::update);
+		});
 	}
 
 	@EventHandler
@@ -66,46 +77,65 @@ public class Podiums implements Listener {
 	}
 
 	public enum Podium {
-		PLAYTIME_TOTAL(2709, 2708, 2707) {
+		PLAYTIME_TOTAL(4639, 4640, 4641) {
 			@Override
-			Map<UUID, String> getTop() {
+			public Map<UUID, String> getTop() {
 				return new HoursService().getPage().subList(0, 3).stream()
 					.collect(Collectors.toMap(
 						PageResult::getUuid,
-						hours -> Timespan.of(hours.getTotal()).format(),
+						hours -> Timespan.ofSeconds(hours.getTotal()).format(),
 						(h1, h2) -> h1, LinkedHashMap::new
 					));
 			}
 		},
-		PLAYTIME_MONTHLY(2712, 2711, 2710) {
+		PLAYTIME_MONTHLY(4636, 4637, 4638) {
 			@Override
-			Map<UUID, String> getTop() {
+			public Map<UUID, String> getTop() {
+				return getTop(YearMonth.now());
+			}
+
+			@Override
+			public Map<UUID, String> getTopLastMonth() {
+				return getTop(YearMonth.now().minusMonths(1));
+			}
+
+			@NotNull
+			private LinkedHashMap<UUID, String> getTop(YearMonth yearMonth) {
 				HoursService service = new HoursService();
-				return service.getPage(new HoursTopArguments("monthly")).subList(0, 3).stream()
+				return service.getPage(new HoursTopArguments(yearMonth.format(DateTimeFormatter.ofPattern("yyyy-MM")))).subList(0, 3).stream()
 					.collect(Collectors.toMap(
 						PageResult::getUuid,
-						hours -> Timespan.of(service.get(hours.getUuid()).getMonthly()).format(),
+						hours -> Timespan.ofSeconds(service.get(hours.getUuid()).getMonthly(yearMonth)).format(),
 						(h1, h2) -> h1, LinkedHashMap::new
 					));
 			}
 		},
-		VOTES(2700, 2699, 2698) {
+		VOTES(4651, 4652, 4653) {
 			@Override
-			Map<UUID, String> getTop() {
-				return new TopVoterData(YearMonth.now()).getTopVoters().subList(0, 3).stream()
+			public Map<UUID, String> getTop() {
+				return getTop(YearMonth.now());
+			}
+
+			@Override
+			public Map<UUID, String> getTopLastMonth() {
+				return getTop(YearMonth.now().minusMonths(1));
+			}
+
+			@NotNull
+			private LinkedHashMap<UUID, String> getTop(YearMonth yearMonth) {
+				return new TopVoterData(yearMonth).getTopVoters().subList(0, 3).stream()
 					.collect(Collectors.toMap(
 						topVoter -> topVoter.getVoter().getUuid(),
-						topVoter -> String.valueOf(topVoter.getCount()),
+						topVoter -> NumberFormat.getInstance().format(topVoter.getCount()),
 						(h1, h2) -> h1, LinkedHashMap::new
 					));
 			}
 		},
-		BALANCE(2703, 2702, 2701) {
+		BALANCE(4654, 4655, 4656) {
 			@Override
-			Map<UUID, String> getTop() {
+			public Map<UUID, String> getTop() {
 				return new BankerService().getAll().stream()
-					.sorted(Comparator.comparing(banker -> banker.getBalance(ShopGroup.SURVIVAL), Comparator.reverseOrder()))
-					.collect(toList())
+					.sorted(Comparator.comparing(banker -> banker.getBalance(ShopGroup.SURVIVAL), Comparator.reverseOrder())).toList()
 					.subList(0, 3).stream()
 					.collect(Collectors.toMap(
 						Banker::getUuid,
@@ -114,40 +144,102 @@ public class Podiums implements Listener {
 					));
 			}
 		},
-		MCMMO(2706, 2705, 2704) {
+		MCMMO(4648, 4649, 4650) {
 			@Override
-			Map<UUID, String> getTop() {
+			public Map<UUID, String> getTop() {
 				return mcMMO.getDatabaseManager().readLeaderboard(null, 1, 3).subList(0, 3).stream()
 					.collect(Collectors.toMap(
 						playerStat -> PlayerUtils.getPlayer(playerStat.name).getUniqueId(),
-						playerStat -> String.valueOf(playerStat.statVal),
+						playerStat -> NumberFormat.getInstance().format(playerStat.statVal),
 						(h1, h2) -> h1, LinkedHashMap::new
 					));
 			}
 		},
-		TOP_MONTHLY_CONTRIBUTORS(2772, 2773, 2774) {
+		BLOCKS_BROKEN(4628, 4629, 4630) {
 			@Override
-			Map<UUID, String> getTop() {
-				return new ContributorService().getMonthlyTop(YearMonth.now(), 3).stream()
+			public Map<UUID, String> getTop() {
+				final Map<UUID, Integer> blocksBroken = new HashMap<>();
+				for (UUID uuid : new ArrayList<>(new HoursService().getActivePlayers().subList(0, 30))) {
+					final OfflinePlayer player = Bukkit.getOfflinePlayer(uuid);
+					int total = 0;
+					for (Material material : Material.values())
+						if (material.isBlock())
+							total += player.getStatistic(Statistic.MINE_BLOCK, material);
+
+					blocksBroken.put(uuid, total);
+				}
+
+				return new ArrayList<>(Utils.sortByValueReverse(blocksBroken).keySet()).subList(0, 3).stream()
 					.collect(Collectors.toMap(
-						Contributor::getUuid,
-						contributor -> contributor.getMonthlySumFormatted(YearMonth.now()),
+						uuid -> uuid,
+						uuid -> NumberFormat.getInstance().format(blocksBroken.get(uuid)),
 						(h1, h2) -> h1, LinkedHashMap::new
 					));
+			}
+		},
+		MOBS_KILLED(4625, 4626, 4627) {
+			@Override
+			public Map<UUID, String> getTop() {
+				final Map<UUID, Integer> entitiesKilled = new HashMap<>();
+				for (UUID uuid : new ArrayList<>(new HoursService().getActivePlayers().subList(0, 50))) {
+					final OfflinePlayer player = Bukkit.getOfflinePlayer(uuid);
+					int total = 0;
+					for (EntityType entityType : EnumUtils.valuesExcept(EntityType.class, EntityType.PLAYER, EntityType.ARMOR_STAND))
+						if (entityType.isAlive())
+							total += player.getStatistic(Statistic.KILL_ENTITY, entityType);
+
+					entitiesKilled.put(uuid, total);
+				}
+
+				return new ArrayList<>(Utils.sortByValueReverse(entitiesKilled).keySet()).subList(0, 3).stream()
+					.collect(Collectors.toMap(
+						uuid -> uuid,
+						uuid -> NumberFormat.getInstance().format(entitiesKilled.get(uuid)),
+						(h1, h2) -> h1, LinkedHashMap::new
+					));
+			}
+		},
+		DAILY_LOGIN_STREAK(4632, 4633, 4634) {
+			@Override
+			public Map<UUID, String> getTop() {
+				final DailyRewardUserService service = new DailyRewardUserService();
+				return service.getAll().stream()
+					.filter(user -> user.getCurrentStreak().getStreak() > 0)
+					.sorted(Comparator.<DailyRewardUser>comparingInt(user -> user.getCurrentStreak().getStreak()).reversed())
+					.toList()
+					.subList(0, 3)
+					.stream()
+					.collect(Collectors.toMap(
+						DailyRewardUser::getUuid,
+						user -> NumberFormat.getInstance().format(user.getCurrentStreak().getStreak()),
+						(h1, h2) -> h1, LinkedHashMap::new
+					));
+			}
+		},
+		TOP_MONTHLY_CONTRIBUTORS(4642, 4643, 4644) {
+			@Override
+			public Map<UUID, String> getTop() {
+				return getTop(YearMonth.now());
 			}
 
-			@Nullable
 			@Override
-			Map<UUID, String> validateGetTop() {
-				Map<UUID, String> top = getTop();
-				if (top.size() != 3)
-					return null;
-				return top;
+			public Map<UUID, String> getTopLastMonth() {
+				return getTop(YearMonth.now().minusMonths(1));
+			}
+
+			@NotNull
+			private LinkedHashMap<UUID, String> getTop(YearMonth yearMonth) {
+				return new ContributorService().getMonthlyTop(yearMonth, 3).stream()
+					.collect(Collectors.toMap(
+						Contributor::getUuid,
+						contributor -> contributor.getMonthlySumFormatted(yearMonth),
+						(h1, h2) -> h1, LinkedHashMap::new
+					));
 			}
 		},
-		TOP_CONTRIBUTORS(3835, 3837, 3836) {
+		TOP_CONTRIBUTORS(4645, 4646, 4647) {
 			@Override
-			Map<UUID, String> getTop() {
+			public Map<UUID, String> getTop() {
 				return new ContributorService().getTop(3).stream()
 					.collect(Collectors.toMap(
 						Contributor::getUuid,
@@ -158,22 +250,13 @@ public class Podiums implements Listener {
 		},
 		GALLERY_TOP_MONTHLY_CONTRIBUTORS(4537, 4538, 4539) {
 			@Override
-			Map<UUID, String> getTop() {
+			public Map<UUID, String> getTop() {
 				return TOP_MONTHLY_CONTRIBUTORS.getTop();
-			}
-
-			@Nullable
-			@Override
-			Map<UUID, String> validateGetTop() {
-				Map<UUID, String> top = getTop();
-				if (top.size() != 3)
-					return null;
-				return top;
 			}
 		},
 		GALLERY_TOP_CONTRIBUTORS(4540, 4541, 4542) {
 			@Override
-			Map<UUID, String> getTop() {
+			public Map<UUID, String> getTop() {
 				return TOP_CONTRIBUTORS.getTop();
 			}
 		};
@@ -186,50 +269,39 @@ public class Podiums implements Listener {
 				Nexus.warn(name() + " did not define 3 NPC ids (" + ids.length + ")");
 		}
 
-		abstract Map<UUID, String> getTop();
+		public abstract Map<UUID, String> getTop();
+
+		public Map<UUID, String> getTopLastMonth() {
+			throw new NotImplementedException();
+		}
 
 		public void update() {
-			// Ignore votes for the first day of the month
-			if (this == VOTES && LocalDate.now().getDayOfMonth() == 1)
-				return;
-
 			Tasks.async(() -> {
-				Map<UUID, String> top = validateGetTop();
-				if (top == null)
-					return;
-
-				if (!new CooldownService().check(StringUtils.getUUID0(), "podiums_" + name(), TickTime.MINUTE.x(5)))
+				if (!new CooldownService().check(UUID0, "podiums_" + name(), TickTime.MINUTE.x(5)))
 					return;
 
 				updateActual();
 			});
 		}
 
-		@Nullable
-		Map<UUID, String> validateGetTop() {
-			Map<UUID, String> top = getTop();
-			if (top.size() != 3) {
-				if (List.of(GALLERY_TOP_MONTHLY_CONTRIBUTORS, TOP_MONTHLY_CONTRIBUTORS).contains(this))
-					return null;
-
-				return null;
-			}
-			return top;
-		}
-
 		public void updateActual() {
-			Map<UUID, String> top = validateGetTop();
+			Map<UUID, String> top = getTop();
 			if (top == null)
 				return;
 
 			Tasks.sync(() -> {
 				AtomicInteger i = new AtomicInteger(0);
 				top.entrySet().iterator().forEachRemaining(entry -> {
+					final int npcId = ids[i.get()];
 					Nerd nerd = Nerd.of(entry.getKey());
-					CitizensUtils.updateName(ids[i.get()], colorize("&e" + entry.getValue()));
-					CitizensUtils.updateSkin(ids[i.get()], nerd.getName());
+					CitizensUtils.respawnNPC(npcId);
+					CitizensUtils.updateName(npcId, colorize("&e" + entry.getValue()));
+					CitizensUtils.updateSkin(npcId, nerd.getName());
 					runCommandAsConsole("hd setline podiums_" + name().toLowerCase() + "_" + i.incrementAndGet() + " 1 " + decolorize(colorize(nerd.getColoredName())));
 				});
+
+				while (i.get() < 3)
+					CitizensUtils.despawnNPC(ids[i.getAndIncrement()]);
 			});
 		}
 	}
